--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                 <img class="img-fluid imgCenter" src="assets/kickflip.jpg">
                                 <div class="row">
                                     <div class="col-sm-12">
-                                        <button type="button" class="btn btn-danger btn-lg btnCenter">Kickflip</button>
+                                        <button type="button" class="btn btn-danger btn-lg btnCenter" data-toggle="modal" data-target=".kf-modal-lg">Kickflip</button>
                                     </div>
                                 </div>
                             </div>
@@ -136,7 +136,7 @@
                                 <img class="img-fluid imgCenter" src="assets/360flip.jpg">
                                 <div class="row">
                                     <div class="col-sm-12">
-                                        <button type="button" class="btn btn-danger btn-lg btnCenter">360 Flip</button>
+                                        <button type="button" class="btn btn-danger btn-lg btnCenter" data-toggle="modal" data-target=".360-modal-md">360 Flip</button>
                                     </div>
                                 </div>
                             </div>
@@ -144,7 +144,7 @@
                                 <img class="img-fluid imgCenter" src="assets/bscrook.jpg">
                                 <div class="row">
                                     <div class="col-sm-12">
-                                        <button type="button" class="btn btn-danger btn-lg btnCenter">BS Crook</button>
+                                        <button type="button" class="btn btn-danger btn-lg btnCenter" data-toggle="modal" data-target=".bscrook-modal-sm">BS Crook</button>
                                     </div>
                                 </div>
                             </div>
@@ -192,6 +192,42 @@
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                         </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Kickflip Modal -->
+            <div class="modal fade kf-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <div class="embed-responsive embed-responsive-16by9">   
+                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ilzy0viqVes" allowfullscreen></iframe>
+                        </div>
+                        <p>Kickflips are easy. Pop, flick, catch, land. #BOOM</p>
+                    </div>
+                </div>
+            </div>
+            
+            <!-- 360 Flip Modal -->
+            <div class="modal fade 360-modal-md" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-md">
+                    <div class="modal-content">
+                        <div class="embed-responsive embed-responsive-16by9">   
+                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ilzy0viqVes" allowfullscreen></iframe>
+                        </div>
+                        <p>360 flips are easy. Pop, scissor kick, catch, land. #BOOM</p>
+                    </div>
+                </div>
+            </div>
+            
+            <!-- BS Crook Modal -->
+            <div class="modal fade bscrook-modal-sm" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-sm">
+                    <div class="modal-content">
+                        <div class="embed-responsive embed-responsive-16by9">   
+                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ilzy0viqVes" allowfullscreen></iframe>
+                        </div>
+                        <p>Backside Crooks are sick. Nollie in, nollie out! #BOOM</p>
                     </div>
                 </div>
             </div>
