--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="bootstrap-4.0.0-beta.2-dist/css/bootstrap-grid.min.css">
         <link rel="stylesheet" href="bootstrap-4.0.0-beta.2-dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
@@ -153,6 +154,23 @@
                 </div>
             </div>
 
+            <!-- Footer-->
+            <footer class="footer bg-dark">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-sm-12 col-lg-3">
+                            <img class="img-fluid footerImg" src="assets/KFS_LIGHT.png">
+                        </div>
+                        <div class="col-sm-12 col-lg-9 social-wrapper">
+                            <a href="https://facebook.com" target="_blank">
+                                <i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i></a>
+                            <i class="fa fa-google-plus-square fa-3x" aria-hidden="true"></i>
+                            <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </div>
+            </footer>
+
             <!-- Modal -->
             <!-- Cool Stuff Modal -->
             <div class="modal fade" id="coolStuffModal" tabindex="-1" role="dialog" aria-labelledby="coolStuffLabel" aria-hidden="true">
@@ -207,7 +225,7 @@
                     </div>
                 </div>
             </div>
-            
+
             <!-- 360 Flip Modal -->
             <div class="modal fade 360-modal-md" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-md">
@@ -219,7 +237,7 @@
                     </div>
                 </div>
             </div>
-            
+
             <!-- BS Crook Modal -->
             <div class="modal fade bscrook-modal-sm" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-sm">
